--- a/delhi-to-shimla-taxi-services.html
+++ b/delhi-to-shimla-taxi-services.html
@@ -12,7 +12,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Delhi to Nainital Taxi, Book Cars on Rent for Nainital Tour</title>
+       <title>Delhi  Taxi, Book Cars on Rent for Tour</title>
     <meta name="description"
         content="Avail the best deals on Delhi to Nainital Taxi services to make your outstation trip memorable. HSR Travel Delhi offers safe & secure journeys with clean/sanitized cabs." />
     <meta name="keywords" content="cars for nainital tour,cab on rent for nainital,taxi booking for nainital" />
@@ -154,7 +154,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -214,6 +214,57 @@
                                                     Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-Jimcorbett-taxi-services.html">
+                                                    Jim Corbett Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-amritsar-taxi.html">
+                                                    Amritsar Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mathuraagra-taxi-services.html">
+                                                    Mathura Agra Delhi Tour
+                                                </a>
+                                            </li>
+                                          
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-agrajaipur-taxi.html">
+                                                     Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaipurbharatpur.html">
+                                                    Jaipur Bharatpur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-udaipur.html">
+                                                    Udaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaisalmer.html">
+                                                    Jaisalmer Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
+                                                    Chandigarh Delhi Tour
+                                                </a>
+                                            </li>
+                                            <!-- <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li> -->
                                         </ul>
                                     </li>
                                     <li class="nav-item">
