--- a/local-car-rental.html
+++ b/local-car-rental.html
@@ -144,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -204,6 +204,57 @@
                                                     Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-Jimcorbett-taxi-services.html">
+                                                    Jim Corbett Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-amritsar-taxi.html">
+                                                    Amritsar Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mathuraagra-taxi-services.html">
+                                                    Mathura Agra Delhi Tour
+                                                </a>
+                                            </li>
+                                          
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-agrajaipur-taxi.html">
+                                                     Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaipurbharatpur.html">
+                                                    Jaipur Bharatpur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-udaipur.html">
+                                                    Udaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaisalmer.html">
+                                                    Jaisalmer Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
+                                                    Chandigarh Delhi Tour
+                                                </a>
+                                            </li>
+                                            <!-- <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li> -->
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -403,7 +454,7 @@
 	    	<div class="container">
 		    	<h1 class="title h-left">Local Car Rental </h1>
 		    	<p class="para">HSR Travel Delhi is a leading <a href="index-2.html">car rental company</a> in Delhi, offering local car rental booking for <a href="airport-car-rental-services.html">airport</a> pick up and drop facilities in Delhi to visit the nearby Delhi NCR regions, attending weddings, shopping, short trips, or for many other purposes as per the requirements of clients. Our services are available round the clock and we are pleased to help you at any time. Our local rental cars are well maintained and are driven by experienced, multilingual, and well-mannered chauffeurs who give high preferences to safety, safe drive, and a hassle-free trip to our clients</p>
-		    	<p class="para">The company has a fleet of cars of all categories that include budget cars, luxury cars, Full-Size Cars, Mid Size Cars, Vans, and Sports Utility Vehicles (SUVs). Clients who are budget concerned can choose cars like Maruti Wagon R, <a href="swift-dzire-car-on-rent.html">Maruti Swift DZire</a>, Maruti Alto 800, Maruti Esteem, Honda City, Mahindra Bolero, Mahindra Scorpio, Tata Indica, Tata Sumo, Maruti Versa, Maruti Zen and Maruti 800, etc. We have a wide range of cars with us with both AC and Non AC facilities to meet the requirements of every individual client as per their requirements.</p>
+		    	<p class="para">The company has a fleet of cars of all categories that include budget cars, luxury cars, Full-Size Cars, Mid Size Cars, Vans, and Sports Utility Vehicles (SUVs). Clients who are budget concerned can choose cars like   <a href="swift-dzire-car-on-rent.html">Maruti Swift DZire</a>, Maruti Alto 800, Maruti Esteem, Honda City, Mahindra Bolero, Mahindra Scorpio, Tata Indica, Tata Sumo, Maruti Versa, Maruti Zen and Maruti 800, etc. We have a wide range of cars with us with both AC and Non AC facilities to meet the requirements of every individual client as per their requirements.</p>
 		    	<h5>Why HSR Travel Delhi local car rental Services?</h5>
 		    	<p class="para">We are one of the most trusted and leading <a href="car-rental-services.html">car rental service</a> providers in Delhi operating for the last 10 years in the national capital regions. Our clients are from all sectors be it corporate, banks, small industries, microfinance companies, schools, families, travelers, tourists, etc. Our services are highly appreciated by our clients thus motivating us to extend our service to other regions of the nation.</p>
 		    	<ul class="disc">
