--- a/monthly-car-rental-services.html
+++ b/monthly-car-rental-services.html
@@ -144,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -204,6 +204,57 @@
                                                     Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-Jimcorbett-taxi-services.html">
+                                                    Jim Corbett Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-amritsar-taxi.html">
+                                                    Amritsar Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mathuraagra-taxi-services.html">
+                                                    Mathura Agra Delhi Tour
+                                                </a>
+                                            </li>
+                                          
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-agrajaipur-taxi.html">
+                                                     Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaipurbharatpur.html">
+                                                    Jaipur Bharatpur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-udaipur.html">
+                                                    Udaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaisalmer.html">
+                                                    Jaisalmer Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
+                                                    Chandigarh Delhi Tour
+                                                </a>
+                                            </li>
+                                            <!-- <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li> -->
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -406,7 +457,7 @@
 		    	<p class="para">Are you looking for monthly car hire, rental services at an affordable price? Then you have come across the right place.</p>
 		    	<p class="para">HSR Travel Delhi, the most trusted car rental company based out of Delhi. We are offering monthly car hire plans to fulfill your regular business travel or meet-up needs, vacation travel needs, and weekend getaway requirements. HSR Travel Delhi car rental services are available to customers, who are looking for car rental on a monthly basis in Delhi as well as in all different states/cities in India. Our monthly car rental rates offered are transparent and we are promised to serve the best quality services to our clients.</p>
 		    	<h5>Our Cars</h5>
-		    	<p class="para">We have a premium quality cars fleet of all categories including luxury cars, Full-Size Cars, Mid Size Cars, Vans, and Sports Utility Vehicles (SUVs). Clients who are budget concerned can choose cars like Maruti Wagon R, Maruti Swift DZire, Maruti Alto 800, Maruti Esteem, Honda City, Mahindra Bolero, Mahindra Scorpio, Tata Indica, Tata Sumo, Maruti Versa, Maruti Zen and Maruti 800, etc.</p>
+		    	<p class="para">We have a premium quality cars fleet of all categories including luxury cars, Full-Size Cars, Mid Size Cars, Vans, and Sports Utility Vehicles (SUVs). Clients who are budget concerned can choose cars like   Maruti Swift DZire, Maruti Alto 800, Maruti Esteem, Honda City, Mahindra Bolero, Mahindra Scorpio, Tata Indica, Tata Sumo, Maruti Versa, Maruti Zen and Maruti 800, etc.</p>
 		    	<p class="para">At HSR Travel Delhi, we offer monthly car hire with both AC and Non AC facilities to meet the requirements of every individual client as per their requirements. Our services are available round the clock and we are happy to help you at any time.</p>
 		    	<h3>Advantages of long-term car rental with us</h3>
 		    	<style>
