--- a/cab-booking.html
+++ b/cab-booking.html
@@ -144,7 +144,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -204,6 +204,57 @@
                                                     Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-Jimcorbett-taxi-services.html">
+                                                    Jim Corbett Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-amritsar-taxi.html">
+                                                    Amritsar Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mathuraagra-taxi-services.html">
+                                                    Mathura Agra Delhi Tour
+                                                </a>
+                                            </li>
+                                          
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-agrajaipur-taxi.html">
+                                                     Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaipurbharatpur.html">
+                                                    Jaipur Bharatpur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-udaipur.html">
+                                                    Udaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaisalmer.html">
+                                                    Jaisalmer Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
+                                                    Chandigarh Delhi Tour
+                                                </a>
+                                            </li>
+                                            <!-- <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li> -->
                                         </ul>
                                     </li>
                                     <li class="nav-item">
