--- a/delhi-to-agrajaipur-taxi.html
+++ b/delhi-to-agrajaipur-taxi.html
@@ -12,7 +12,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <title>Delhi to Nainital Taxi, Book Cars on Rent for Nainital Tour</title> -->
+    <title>Delhi  Taxi, Book Cars on Rent for Tour</title>
     <meta name="description"
         content="Avail the best deals on Delhi to Nainital Taxi services to make your outstation trip memorable. HSR Travel Delhi offers safe & secure journeys with clean/sanitized cabs." />
     <meta name="keywords" content="cars for nainital tour,cab on rent for nainital,taxi booking for nainital" />
@@ -154,7 +154,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -472,46 +472,62 @@
                     </script>
                 </div>
             </div>
-            <div class="dc-carousel">
-                <figure><img src="img/Dalhousie_Tour_Package_Header_Image.webp"  alt="Nainital Tour with HSR Travel Delhi"></figure>
+            <div class="dc-carousel ">
+                <figure><img src="img/YDmiddz2MW.jpg" class="w-100"  alt="Nainital Tour with HSR Travel Delhi"></figure>
             </div>
         </div>
         <!-- /.carousel -->
         <!-- deal slider  -->
         <div class="full-width w-bg">
             <div class="container">
-               <h3 class=""><b>Bir Billing , Dalhousie. Delhi Tour 3 Night/ 4 Days</b></h3>
-<h3>Tour Highlights</h3>
-<ul class="disc">
-    <li>Experience paragliding adventure in Bir Billing, one of the best paragliding sites in Asia.</li>
-    <li>Explore peaceful monasteries, yoga retreats, and natural beauty in Bir.</li>
-    <li>Visit Dalhousie’s colonial architecture, scenic viewpoints, and lush valleys.</li>
-    <li>Enjoy leisure time shopping and walking at Mall Road and nearby attractions.</li>
-    <li>Return to Delhi with comfortable car service and quality driver support.</li>
-</ul>
-
-<h3>Car Rental and Services</h3>
-<p class="para">
-    Travel comfortably with Pal Car Rental. Choose from a fleet of well-maintained vehicles including hatchbacks, sedans, SUVs, and MUVs
-    suited to your group size. All cars come with professional chauffeurs to ensure a safe and smooth journey from Delhi to Bir, Dalhousie,
-    and back.
-</p>
-
-<h3>Itinerary</h3>
-<p class="para">
-    <b>Day 1:</b> Depart from Delhi early morning to Bir Billing by comfortable car. Enjoy arrival and local sightseeing.<br>
-    <b>Day 2:</b> Morning paragliding session in Bir Billing. Visit monasteries and explore local culture.<br>
-    <b>Day 3:</b> Drive to Dalhousie. Enjoy sightseeing of colonial sites, Khajjiar Lake, and Mall Road.<br>
-    <b>Day 4:</b> Return drive from Dalhousie to Delhi with drop-off at airport or hotel.
-</p>
-
-<h3>Booking and Services</h3>
-<p class="para">
-    Book your Bir Billing to Dalhousie to Delhi package tour with HSR Travel Delhi for a luxurious, safe, and convenient experience. 
-    We provide timely pickups, well-maintained vehicles, experienced chauffeurs, and 24/7 customer support to help you enjoy your 
-    Himalayan getaway without worries.
-</p>
-    <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
+        <h1 class="title h-left">Agra Jaipur Tour</h1>
+        <p class="para"> Explore two of North India's most iconic cities with the Agra Jaipur Tour. Discover timeless Mughal
+            marvels and royal Rajasthani grandeur as you travel from Agra, home to the world-renowned Taj Mahal, to the vibrant
+            Pink City of Jaipur. </p>
+        <h3>About Agra</h3>
+        <p class="para"> Agra is world-famous for the breathtaking Taj Mahal, one of the Seven Wonders of the World, and a
+            symbol of eternal love. The city is also home to remarkable landmarks such as Agra Fort, a UNESCO World Heritage
+            Site showcasing Mughal architecture, and Fatehpur Sikri, an abandoned city of red sandstone. Visitors can also
+            explore Mehtab Bagh, Itimad-ud-Daulah's Tomb, and indulge in local street shopping for crafts and sweets. </p>
+        <h3>About Jaipur</h3>
+        <p class="para"> Jaipur, the Pink City of India, is the capital of the royal state of Rajasthan. It boasts magnificent
+            palaces, ancient forts, and vibrant bazaars. Top attractions include Amer Fort, Hawa Mahal (Palace of Winds), City
+            Palace, Jantar Mantar observatory (UNESCO site), Jal Mahal (Water Palace), and Nahargarh Fort. Jaipur is also famous
+            for its lively culture, local handicrafts, and delicious Rajasthani cuisine. </p>
+        <h3>Agra to Jaipur Experience</h3>
+        <p class="para"> Journey comfortably between historic Agra and regal Jaipur with our expert travel services. Enjoy
+            guided sightseeing, curated cultural stops, and seamless transfers as you visit the best that both cities have to
+            offer. Perfect for travelers who want to immerse themselves in India's architectural beauty, royal heritage, and
+            unforgettable experiences. </p>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Vehicle Type</th>
+                                <th>Per KM</th>
+                                <th>Limit/Day</th>
+                                <th>Driver Charge</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Swift Dzire</td>
+                                <td>₹11</td>
+                                <td>250 Kms</td>
+                                <td>₹250</td>
+                            </tr>
+                            <tr>
+                                <td>Innova Crysta/Xylo</td>
+                                <td>₹18</td>
+                                <td>250 Kms</td>
+                                <td>₹250</td>
+                            </tr>
+                              
+                        </tbody>
+                    </table>
+                </div>
+                <div class="dc-carousel">
+                    <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <a href="swift-dzire-car-on-rent.html">
