--- a/delhi-to-amritsar-taxi.html
+++ b/delhi-to-amritsar-taxi.html
@@ -143,7 +143,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                       <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -203,6 +203,57 @@
                                                     Shimla Manali Delhi Tour
                                                 </a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-Jimcorbett-taxi-services.html">
+                                                    Jim Corbett Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-amritsar-taxi.html">
+                                                    Amritsar Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mathuraagra-taxi-services.html">
+                                                    Mathura Agra Delhi Tour
+                                                </a>
+                                            </li>
+                                          
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-agrajaipur-taxi.html">
+                                                     Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaipurbharatpur.html">
+                                                    Jaipur Bharatpur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-udaipur.html">
+                                                    Udaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-jaisalmer.html">
+                                                    Jaisalmer Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
+                                                    Chandigarh Delhi Tour
+                                                </a>
+                                            </li>
+                                            <!-- <li>
+                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
+                                                    Ranthambore Delhi Tour
+                                                </a>
+                                            </li> -->
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -436,7 +487,7 @@
 
 		    	<h5>Our Cars</h5>
 		    	<p class="para">We have fleets of well-maintained as well as new cars which include Hatchback, Sedan, SUV, MUV categories of cars to suit the need and preferences of our guests and clients.</p>
-		    	<p class="para">This includes cars like Maruti Wagon R, Maruti Swift DZire, Maruti Alto 800, Maruti Esteem, Honda City, Mahindra Bolero, Mahindra Scorpio, Tata Indica, Tata Sumo, Maruti Versa, Maruti Zen and Maruti 800, etc at a reasonable cost. We have a wide range of cars with us with both AC and Non AC facilities to meet the requirements of every individual client as per their requirements.</p>
+		    	<p class="para">This includes cars like   Maruti Swift DZire, Maruti Alto 800, Maruti Esteem, Honda City, Mahindra Bolero, Mahindra Scorpio, Tata Indica, Tata Sumo, Maruti Versa, Maruti Zen and Maruti 800, etc at a reasonable cost. We have a wide range of cars with us with both AC and Non AC facilities to meet the requirements of every individual client as per their requirements.</p>
 		    	<h5>Why Hire Car Rentals from Delhi to Mathura from Pal Car Rentals?</h5>
 		    	<p class="para">At HSR Travel  car rental services, we are committed to our clients for offering the best quality services at an affordable cost.  We are one of the leading car rental service providers in Delhi operating for the last 10 years in the national capital regions and trusted by the thousands of people in Delhi and other regions. Our clients are from all sectors be it corporate, banks, small industries, microfinance companies, schools, families, travelers, tourists, etc. Our services are highly appreciated by our clients thus motivating us to extend our service to other regions of the nation.</p>
 			    <ul class="disc">
