--- a/delhi-to-chandigarh.html
+++ b/delhi-to-chandigarh.html
@@ -12,7 +12,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <title>Delhi to Nainital Taxi, Book Cars on Rent for Nainital Tour</title> -->
+    <title>Delhi  Taxi, Book Cars on Rent for Tour</title>
     <meta name="description"
         content="Avail the best deals on Delhi to Nainital Taxi services to make your outstation trip memorable. HSR Travel Delhi offers safe & secure journeys with clean/sanitized cabs." />
     <meta name="keywords" content="cars for nainital tour,cab on rent for nainital,taxi booking for nainital" />
@@ -154,7 +154,7 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
                                             href="#">outstations</a>
                                             <ul class="dropdown-menu">
                                             <li>
@@ -473,45 +473,60 @@
                 </div>
             </div>
             <div class="dc-carousel">
-                <figure><img src="img/Dalhousie_Tour_Package_Header_Image.webp"  alt="Nainital Tour with HSR Travel Delhi"></figure>
+                <figure><img src="img/empty-square-lake-city-park.jpg" alt="Nainital Tour with HSR Travel Delhi"></figure>
             </div>
         </div>
         <!-- /.carousel -->
         <!-- deal slider  -->
         <div class="full-width w-bg">
             <div class="container">
-               <h3 class=""><b>Bir Billing , Dalhousie. Delhi Tour 3 Night/ 4 Days</b></h3>
+<h1 class="title h-left">Delhi to Chandigarh Tour</h1>
+<p class="para">Embark on a vibrant journey from Delhi to Chandigarh, the City Beautiful of northern India. Known for
+    its modern architecture, lush gardens, and cultural heritage, Chandigarh offers a perfect blend of urban planning
+    and natural beauty.</p>
+<h3>About Chandigarh</h3>
+<p class="para"> Chandigarh is famous for its beautiful rock Garden, Sukhna Lake, Rose Garden and Sector 17 Market. The
+    city stands out with its meticulously planned sectors, wide roads, and beautiful parks. It also serves as a gateway
+    for exploring nearby attractions like Morni Hills and Pinjore Gardens. </p>
 <h3>Tour Highlights</h3>
 <ul class="disc">
-    <li>Experience paragliding adventure in Bir Billing, one of the best paragliding sites in Asia.</li>
-    <li>Explore peaceful monasteries, yoga retreats, and natural beauty in Bir.</li>
-    <li>Visit Dalhousie’s colonial architecture, scenic viewpoints, and lush valleys.</li>
-    <li>Enjoy leisure time shopping and walking at Mall Road and nearby attractions.</li>
-    <li>Return to Delhi with comfortable car service and quality driver support.</li>
+    <li>Visit the famous Rock Garden and Sukhna Lake for a relaxing experience.</li>
+    <li>Explore the floral beauty of Rose Garden, Asia’s largest of its kind.</li>
+    <li>Shop and enjoy local cuisine at Sector 17 Market.</li>
+    <li>Enjoy city sightseeing with professional chauffeur-driven cars.</li>
+    <li>Distance from Delhi to Chandigarh is approximately 250 km, taking around 4-5 hours by road.</li>
 </ul>
-
-<h3>Car Rental and Services</h3>
-<p class="para">
-    Travel comfortably with Pal Car Rental. Choose from a fleet of well-maintained vehicles including hatchbacks, sedans, SUVs, and MUVs
-    suited to your group size. All cars come with professional chauffeurs to ensure a safe and smooth journey from Delhi to Bir, Dalhousie,
-    and back.
-</p>
-
-<h3>Itinerary</h3>
-<p class="para">
-    <b>Day 1:</b> Depart from Delhi early morning to Bir Billing by comfortable car. Enjoy arrival and local sightseeing.<br>
-    <b>Day 2:</b> Morning paragliding session in Bir Billing. Visit monasteries and explore local culture.<br>
-    <b>Day 3:</b> Drive to Dalhousie. Enjoy sightseeing of colonial sites, Khajjiar Lake, and Mall Road.<br>
-    <b>Day 4:</b> Return drive from Dalhousie to Delhi with drop-off at airport or hotel.
-</p>
-
-<h3>Booking and Services</h3>
-<p class="para">
-    Book your Bir Billing to Dalhousie to Delhi package tour with HSR Travel Delhi for a luxurious, safe, and convenient experience. 
-    We provide timely pickups, well-maintained vehicles, experienced chauffeurs, and 24/7 customer support to help you enjoy your 
-    Himalayan getaway without worries.
-</p>
-    <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
+<p class="para"> Ideal for weekend trips or short getaways, the minimum recommended duration for this tour is 1 day / 1
+    night, but for a more relaxed experience, a 2 days / 1 night package is preferred. </p>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Vehicle Type</th>
+                                <th>Per KM</th>
+                                <th>Limit/Day</th>
+                                <th>Driver Charge</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Swift Dzire</td>
+                                <td>₹11</td>
+                                <td>250 Kms</td>
+                                <td>₹250</td>
+                            </tr>
+                            <tr>
+                                <td>Innova Crysta/Xylo</td>
+                                <td>₹18</td>
+                                <td>250 Kms</td>
+                                <td>₹250</td>
+                            </tr>
+                              
+                        </tbody>
+                    </table>
+                </div>
+                <div class="dc-carousel">
+                    <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
                     <div class="owl-carousel owl-theme">
                         <div class="item">
                             <a href="swift-dzire-car-on-rent.html">
