--- a/fleets.html
+++ b/fleets.html
@@ -171,8 +171,8 @@
                                             </li>
                                         </ul>
                                     </li>
-                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-                                            href="#">outstations</a>
+                                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                            href="#">Tours</a>
                                             <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
@@ -273,15 +273,26 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
-                                                    Chandigarh Delhi Tour
+                                                <a class="dropdown-item" href="delhi-to-vaishnodevi.html">
+                                                    VaishnoDevi Delhi Tour
                                                 </a>
                                             </li>
-                                            <!-- <li>
-                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
-                                                    Ranthambore Delhi Tour
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-khatushyam.html">
+                                                    Khatu Shyam Delhi Tour
                                                 </a>
-                                            </li> -->
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chardham.html">
+                                                    Char Dham Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-rishikesh.html">
+                                                    Rishikesh Delhi Tour
+                                                </a>
+                                            </li>
+                                           
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -872,7 +883,7 @@ $(document).ready(function () {
 	    </footer>
 	    <!-- Modal -->
 	    <div class="fixed-feedback rotated">
-    <a href="https://api.whatsapp.com/send?phone=918130336867&amp;text=I%20want%20to%20book%20a%20car.">
+    <a href="https://api.whatsapp.com/send?phone=91 8800804024&amp;text=I%20want%20to%20book%20a%20car.">
         <img src="img/whatsapp-icon.png" alt="Whatsapp">
     </a>
 </div>
