--- a/contact-us.html
+++ b/contact-us.html
@@ -145,8 +145,8 @@
                                             </li>
                                         </ul>
                                     </li>
-                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-                                            href="#">outstations</a>
+                                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                            href="#">Tours</a>
                                             <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
@@ -247,15 +247,26 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
-                                                    Chandigarh Delhi Tour
+                                                <a class="dropdown-item" href="delhi-to-vaishnodevi.html">
+                                                    VaishnoDevi Delhi Tour
                                                 </a>
                                             </li>
-                                            <!-- <li>
-                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
-                                                    Ranthambore Delhi Tour
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-khatushyam.html">
+                                                    Khatu Shyam Delhi Tour
                                                 </a>
-                                            </li> -->
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chardham.html">
+                                                    Char Dham Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-rishikesh.html">
+                                                    Rishikesh Delhi Tour
+                                                </a>
+                                            </li>
+                                           
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -290,7 +301,7 @@
 		    	<h1 class="title h-left">Contact us</h1>
 		    	<p>Help us understand about your taxi need and We will suggest you best car for your travel need at cheapest price guaranteed. Provide your information below and our travel expert will call you soon.</p>
 		    	<p><strong>Address: </strong>T-318/13 , Second Floor, Baljit Nagar Near Dimple Public School Delhi-110008 </p>
-		    	<p><strong>Phone Number:  </strong><a href="tel:+91-8130336867" style="color:black"> +91-8130336867</a></p>
+		    	<p><strong>Phone Number:  </strong><a href="tel:+91- 8800804024" style="color:black"> +91- 8800804024</a></p>
 		    	<p><Strong>Email: </Strong><a href="mailto:info@hsrtraveldelhi.co.in" style="color:black">info@hsrtraveldelhi.co.in</a></p>
 		    	
 			</div>
@@ -514,7 +525,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
+<!--<a href="tel:+91 - 8800804024" class="sticky-call">Call +91 - 8800804024</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
