--- a/delhi-to-shimla-taxi-services.html
+++ b/delhi-to-shimla-taxi-services.html
@@ -154,8 +154,8 @@
                                             </li>
                                         </ul>
                                     </li>
-                                   <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-                                            href="#">outstations</a>
+                                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+                                            href="#">Tours</a>
                                             <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
@@ -256,15 +256,26 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="delhi-to-chandigarh.html">
-                                                    Chandigarh Delhi Tour
+                                                <a class="dropdown-item" href="delhi-to-vaishnodevi.html">
+                                                    VaishnoDevi Delhi Tour
                                                 </a>
                                             </li>
-                                            <!-- <li>
-                                                <a class="dropdown-item" href="delhi-to-ratanmbore.html">
-                                                    Ranthambore Delhi Tour
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-khatushyam.html">
+                                                    Khatu Shyam Delhi Tour
                                                 </a>
-                                            </li> -->
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-chardham.html">
+                                                    Char Dham Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-rishikesh.html">
+                                                    Rishikesh Delhi Tour
+                                                </a>
+                                            </li>
+                                           
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -502,33 +513,12 @@
                         4:</b> Sightseeing in Manali including Solang Valley, Rohtang Pass, Kothi, and Rahalla
                     Falls.<br> <b>Day 5:</b> More local sightseeing or leisure day in Manali.<br> <b>Day 6:</b> Early
                     morning departure from Manali; drive back to Delhi with drop-off at airport, station, or hotel.</p>
-                <div class="dc-carousel">
-                    <div class="owl-carousel owl-theme">
-                        <div class="item"> <a href="swift-dzire-car-on-rent.html">
-                                <figure><img src="img/dzire.jpg" alt="Swift Dzire"></figure>
-                                <div class="name">Maruti Suzuki Dzire</div> <button class="btn btn-main">Book
-                                    Now</button>
-                            </a> </div>
-                        <div class="item"> <a href="innova-car.html">
-                                <figure><img src="img/innova.jpg" alt="Toyota Innova"></figure>
-                                <div class="name">Innova Crysta</div> <button class="btn btn-main">Book Now</button>
-                            </a> </div>
-                        <div class="item"> <a href="maruti-ertiga-on-rent.html">
-                                <figure><img src="img/maruti-suzuki-ertiga-1.jpg" alt="Ertiga"></figure>
-                                <div class="name">Maruti Suzuki Ertiga</div> <button class="btn btn-main">Book
-                                    Now</button>
-                            </a> </div>
-                        <div class="item"> <a href="etios-taxi-on-rent.html">
-                                <figure><img src="img/toyota-etios.jpg" alt="Toyota Etios"></figure>
-                                <div class="name">Toyota Etios</div> <button class="btn btn-main">Book Now</button>
-                            </a> </div>
-                    </div>
-                </div>
+           
                <div class="full-width w-bg">
                     <div class="container">
                         <h2 class="title">places to visit</h2>
                         <p>Explore the Most Popular Place to visit in The Month of June in North India, You will enjoy
-                            the rich culture, best in<br> class driver and Free holiday planning with HSR Travel Delhi.
+                            the rich culture, best in<br>  class driver and Free holiday planning with HSR Travel Delhi. <br> <b>Call Now: 8800804024</b>
                         </p>
                         <div class="dc-carousel placetovisit">
                             <div class="owl-carousel owl-theme">
@@ -819,7 +809,7 @@
 
                 }
             </style>
-            <!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
+            <!--<a href="tel:+91 - 8800804024" class="sticky-call">Call +91 - 8800804024</a>-->
         </footer>
         <div class="fixed-feedback rotated">
             <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
