--- a/terms.html
+++ b/terms.html
@@ -157,7 +157,7 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
-                                            href="#">outstations</a>
+                                            href="#">Tours</a>
                                         <ul class="dropdown-menu">
                                             <li>
                                                 <a class="dropdown-item"
@@ -539,7 +539,7 @@
                     <div class="container">
                         <h2 class="title">places to visit</h2>
                         <p>Explore the Most Popular Place to visit in The Month of June in North India, You will enjoy
-                            the rich culture, best in<br> class driver and Free holiday planning with HSR Travel Delhi.
+                            the rich culture, best in<br>  class driver and Free holiday planning with HSR Travel Delhi. <br> <b>Call Now: 8800804024</b>
                         </p>
                         <div class="dc-carousel placetovisit">
                             <div class="owl-carousel owl-theme">
